[tool.poetry]
name = "gs-certs"
version = "0.1.0"
description = ""
authors = ["Vitor Carvalho <vcml@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
zeep = "^4.1.0"
typer = "^0.4.0"
dict2xml = "^1.7.0"
dicttoxml = "^1.7.4"
xmler = "^0.2.0"

[tool.poetry.scripts]
gscerts = 'gs_certs.gscerts:app'

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
